syntax = "proto3";

import "common.proto";
import "aelf_options.proto";
import "acs3.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "AElf.Contracts.ParliamentAuth";

service ParliamentAuthContract {
    option (aelf.csharp_state) = "AElf.Contracts.ParliamentAuth.ParliamentAuthState";
    option (aelf.base) = "acs3.proto";
    // Actions
    rpc Initialize(ParliamentAuthInitializationInput) returns (google.protobuf.Empty){
    }
}

message ParliamentAuthInitializationInput{
    Hash consensusContractSystemName = 1;
}

message Representative{
    bytes PubKey = 1;
    int32 Weight = 2;
}

